--- a/plugin.xml
+++ b/plugin.xml
@@ -90,9 +90,11 @@
                 <param name="onload" value="true" />
             </feature>
         </config-file>
-
+<!--
         <framework src="src/ios/Instabug.framework" custom="true"/>
         <framework src="src/ios/InstabugCore.framework" custom="true"/>
+     -->
+      <framework src="Instabug" type="podspec" spec="7.12.2" />
         <hook type="after_plugin_install" src="scripts/zStripScript.js" />
         <header-file src="src/ios/IBGPlugin.h" />
         <source-file src="src/ios/IBGPlugin.m" />
